--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "pmchatbot",
+  "name": "pmchatbot-ru",
   "description": "Personal Message Chatting robot. Create your fork now",
   "keywords": ["telegram", "pm", "chat", "bot", "open", "source"],
-  "website": "https://github.com/m4mallu/PMChatbot",
-  "repository": "https://github.com/m4mallu/PMChatbot",
+  "website": "https://github.com/anvikVRN/PMChatbot-RU",
+  "repository": "https://github.com/anvikVRN/PMChatbot-RU",
   "env": {
-        "APP_ID": {"description": "Get this value from https://my.telegram.org", "required": true},
-        "API_HASH": {"description": "Get this value from https://my.telegram.org" , "required": true},
-        "TG_BOT_TOKEN": {"description": "Get Bot Token From BotFather Bot","required": true},
+        "APP_ID": {"description": "Взять здесь https://my.telegram.org", "required": true},
+        "API_HASH": {"description": "Взять здесь https://my.telegram.org" , "required": true},
+        "TG_BOT_TOKEN": {"description": "Получить Bot Token в BotFather Bot","required": true},
         "ADMIN": {"description": "Admin user ID for incoming queries","required": true},
         "ENV": {"description": "Set this to ANYTHING","value": "ANYTHING"}
   },
